@@ -1,21 +1,21 @@
 /* 
-  DccNiTghtmare: a satirical post-apocalyptical RPG.
-  Copyright (C) 2005-2009 DNTeam <dnt@dnteam.org>
+  DNT: a satirical post-apocalyptical RPG.
+  Copyright (C) 2005-2012 DNTeam <dnt@dnteam.org>
  
-  This file is part of DccNiTghtmare.
+  This file is part of DNT.
  
-  DccNiTghtmare is free software: you can redistribute it and/or modify
+  DNT is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
 
-  DccNiTghtmare is distributed in the hope that it will be useful,
+  DNT is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
-  along with DccNiTghtmare.  If not, see <http://www.gnu.org/licenses/>.
+  along with DNT.  If not, see <http://www.gnu.org/licenses/>.
 */
 
 #include <math.h>
@@ -381,6 +381,19 @@ void skills::clear()
    {
       skillsVector[aux].points = 0;
       skillsVector[aux].prevPoints = 0;
+      skillsVector[aux].mod = 2;
+   }
+}
+
+/*************************************************************
+ *                      clearCosts                           *
+ *************************************************************/
+void skills::clearCosts()
+{
+   int aux;
+   /* Clear only skills */
+   for(aux = ATT_SKILL_FIRST; aux < totalSkills; aux++)
+   {
       skillsVector[aux].mod = 2;
    }
 }
